--- a/index.html
+++ b/index.html
@@ -2,42 +2,141 @@
 <html lang="en">
 
 <head>
+       
     <meta charset="UTF-8">
+       
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+       
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+        <title>Document</title>
+       
     <!-- Latest compiled and minified CSS -->
+       
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
+       
     <!-- Latest compiled JavaScript -->
+       
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+       
+    <!-- java -->
+       
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+       
+    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+       
+    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js"></script>
+       
+    <!-- css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
+       
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-xl-12 col-ml-6 col-sm-12">
-                <div class="d-grid">
-                    <button type="buttons" class="btn btn-primary btn-block">Full-Width Button</button>
-                </div>
-            </div>
-            <div class="col-xl-6 col-ml-6 col-sm-12">
-                <div class="d-grid">
-                    <button type="buttons" class="btn btn-primary btn-block">Full-Width Button</button>
-                </div>
-            </div>
-            <div class="col-xl-6 col-ml-6 col-sm-12">
-                <div class="d-grid">
-                    <button type="buttons" class="btn btn-primary btn-block">Full-Width Button</button>
-                </div>
-            </div>
-            <div class="col-xl-6 col-ml-6 col-sm-12">
-                <div class="d-grid">
-                    <button type="buttons" class="btn btn-primary btn-block">Full-Width Button</button>
-                </div>
-            </div>
-        </div>
-    </div>
+        <div class="container">
+                <div class="row">
+                        <div class="col-xl-3 col-lg-6 col-sm-12 col-md-5">
+                                <div class="d-grid">
+                                        <button type="buttons" class="btn btn-primary btn-block">Full-Width
+                        Button</button>
+                                    </div>
+                            </div>
+                        <div class="col-xl-3 col-lg-6 col-sm-12 col-md-5">
+                                <div class="d-grid">
+                                        <button type="buttons" class="btn btn-danger btn-block">Full-Width
+                        Button</button>
+                                    </div>
+                            </div>
+                        <div class="col-xl-3 col-lg-6 col-sm-12 col-md-5">
+                                <div class="d-grid">
+                                        <button type="buttons" class="btn btn-info btn-block">Full-Width Button</button>
+                                    </div>
+                            </div>
+                        <div class="col-xl-3 col-lg-6 col-sm-12 col-md-5">
+                                <div class="d-grid">
+                                        <button type="buttons" class="btn btn-warning btn-block">Full-Width
+                        Button</button>
+                                    </div>
+                            </div>
+
+                    </div>
+            </div>
+        <div class="container">
+                <div class="card">
+                        <div class="card-header">Header</div>
+                        <div class="card-body">
+                                <table id="example" class="table table-striped" style="width:100%">
+                                        <thead>
+                                                <tr>
+                                                        <th>Name</th>
+                                                        <th>Position</th>
+                                                        <th>Office</th>
+                                                        <th>Age</th>
+                                                        <th>Start date</th>
+                                                        <th>Salary</th>
+                                                    </tr>
+                                            </thead>
+                                        <tbody>
+                                                <tr>
+                                                        <td>Chayanit jarounmoung</td>
+                                                        <td>System Architect</td>
+                                                        <td>Edinburgh</td>
+                                                        <td>61</td>
+                                                        <td>2011-04-25</td>
+                                                        <td>$320,800</td>
+                                                    </tr>
+                                                <tr>
+                                                        <td>Theeraphart Rukruam</td>
+                                                        <td>Accountant</td>
+                                                        <td>Tokyo</td>
+                                                        <td>63</td>
+                                                        <td>2011-07-25</td>
+                                                        <td>$170,750</td>
+                                                    </tr>
+                                                <tr>
+                                                        <td>Plonrawat Menngam</td>
+                                                        <td>Junior Technical Author</td>
+                                                        <td>San Francisco</td>
+                                                        <td>66</td>
+                                                        <td>2009-01-12</td>
+                                                        <td>$86,000</td>
+                                                    </tr>
+                        <tr>
+                                                        <td>Chaloemwud Ngampramuan</td>
+                                                        <td>Junior Technical Author</td>
+                                                        <td>San Francisco</td>
+                                                        <td>66</td>
+                                                        <td>2009-01-12</td>
+                                                        <td>$86,000</td>
+                                                    </tr>
+                            <tr>
+                                                            <td>Thanat Vorrattanausupa</td>
+                                                            <td>Junior Technical Author</td>
+                                                            <td>San Francisco</td>
+                                                            <td>66</td>
+                                                            <td>2009-01-12</td>
+                                                            <td>$86,000</td>
+                                                        </tr>s
+                                           
+                    </tbody>
+                                        <tfoot>
+                                                <tr>
+                                                        <th>Name</th>
+                                                        <th>Position</th>
+                                                        <th>Office</th>
+                                                        <th>Age</th>
+                                                        <th>Start date</th>
+                                                        <th>Salary</th>
+                                                    </tr>
+                                            </tfoot>
+                                    </table>
+                            </div>
+                        <div class="card-footer">Footer</div>
+                    </div>
+            </div>
 </body>
 
 </html>
